feat: Added share functionality for posts, enhanced UI with share button and translations, enhanced the profile and user profile component to display user feed that includes both user's original posts and shared posts from other users.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,8 @@
 <div class="main-container">
   <div
-    *ngIf="userRole === 'admin' || userRole === 'superadmin' || userRole === 'writer'"
+    *ngIf="
+      userRole === 'admin' || userRole === 'superadmin' || userRole === 'writer'
+    "
     class="new-post-form"
   >
     <form [formGroup]="postForm" (ngSubmit)="onCreatePost()">
@@ -154,6 +156,10 @@
         <small class="comments-count">
           {{ "POST.COMMENTS" | translate }}: {{ post.comments.length }}
         </small>
+        <a class="share-btn" (click)="sharePost(post.id)">
+          <i class="fa fa-share"></i>
+          {{ "POST.SHARE" | translate }}
+        </a>
       </div>
 
       <div class="comments-section">
