--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -5,13 +5,13 @@ $light-gray: #f1f1f1;
 $dark-gray: #6c757d;
 $border-radius: 10px;
 $font-family: "Arial", sans-serif;
+$hover-color: #0056b3;
 
 .profile-container {
   padding: 20px;
   margin: 20px auto;
   background-color: #ffffff;
   border-radius: $border-radius;
-  // box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   font-family: $font-family;
   transition: 0.3s ease;
 
