--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -23,76 +23,144 @@
       class="posts-grid"
     >
       <div class="post-card" *ngFor="let post of posts">
-        <p class="post-content">
-          <a [routerLink]="['/post', post.id]">
-            <div>
-              <span *ngIf="post.content.length > 200"
-                >{{ post.content | slice : 0 : 200 }}...</span
-              >
-              <span *ngIf="post.content.length <= 200">{{ post.content }}</span>
-            </div>
-          </a>
-        </p>
-        <div class="media">
-          <img
-            *ngIf="post.imageUrl"
-            [src]="post.imageUrl"
-            alt="Post Image"
-            class="post-image"
-          />
-          <video
-            *ngIf="post.videoUrl"
-            [src]="post.videoUrl"
-            controls
-            class="post-video"
-          >
-            {{ "POST.VIDEO_NOT_SUPPORTED" | translate }}
-          </video>
-        </div>
-        <p class="post-date">
-          {{ "POST.CREATED" | translate }}
-          : {{ post.createdDate | date : "medium" }}
-          <br />
-          <span *ngIf="post.modifiedDate">
-            | {{ "POST.MODIFIED" | translate }}:
-            {{ post.modifiedDate | date : "medium" }}
-          </span>
-        </p>
-        <div class="reactions">
-          <div class="like-section">
-            <button class="like-btn" (click)="toggleLike(post.id)">
-              <i
-                class="fa-heart"
-                [ngClass]="
-                  isLikedByCurrentUser(post.id) ? 'fa-solid' : 'fa-regular'
-                "
-              ></i>
-            </button>
-            <span>
-              {{ (postLikesMap[post.id] || []).length }}
-              {{ "POST.LIKES" | translate }}
-            </span>
-          </div>
-          <small class="comments-count">
-            {{ "POST.COMMENTS" | translate }}: {{ post.comments.length }}
-          </small>
-        </div>
-        <div class="comments-section" *ngIf="post.comments.length > 0">
+        <div *ngIf="post.sharedPostId">
+          <p class="sharer">
+            <strong>{{ post.sharerName }}</strong>
+          </p>
           <div
-            *ngFor="let comment of post.comments | slice : 0 : 2"
-            class="comment"
+            class="shared-post"
+            [routerLink]="['/post', post.originalPost!.id]"
           >
-            <p class="comment-user">
-              <a [routerLink]="['/user-profile', comment.userName]">{{
-                comment.userName
-              }}</a>
+            <p class="post-author">
+              <a
+                [routerLink]="['/user-profile', post.originalPost!.authorName]"
+              >
+                {{ post.originalPost!.authorName }}
+              </a>
             </p>
-            <p class="comment-content">{{ comment.content }}</p>
-            <p class="comment-date">
-              <span dir="ltr">
-                {{ comment.createdDate | date : "short" }}
+            <div class="post-content">
+              <span *ngIf="post.originalPost!.content.length > 200">
+                {{ post.originalPost!.content | slice : 0 : 200 }}...
+              </span>
+              <span *ngIf="post.originalPost!.content.length <= 200">
+                {{ post.originalPost!.content }}
+              </span>
+            </div>
+            <div class="media">
+              <img
+                *ngIf="post.originalPost!.imageUrl"
+                [src]="post.originalPost!.imageUrl"
+                alt="Post Image"
+                class="post-image"
+              />
+              <video
+                *ngIf="post.originalPost!.videoUrl"
+                [src]="post.originalPost!.videoUrl"
+                controls
+                class="post-video"
+              >
+                {{ "POST.VIDEO_NOT_SUPPORTED" | translate }}
+              </video>
+            </div>
+            <p class="post-date">
+              {{ "POST.CREATED" | translate }}:
+              {{ post.originalPost!.createdDate | date : "medium" }}
+              <br />
+              <span *ngIf="post.originalPost!.modifiedDate">
+                | {{ "POST.MODIFIED" | translate }}:
+                {{ post.originalPost!.modifiedDate | date : "medium" }}
               </span>
             </p>
+          </div>
+          <div class="reactions">
+            <p class="post-date">
+              {{ "POST.SHARED" | translate }}:
+              {{ post.createdDate | date : "medium" }}
+            </p>
+            <a class="share-btn" (click)="sharePost(post.originalPost!.id)">
+              <i class="fa fa-share"></i>
+              {{ "POST.SHARE" | translate }}
+            </a>
+          </div>
+        </div>
+        <div *ngIf="!post.sharedPostId">
+          <p class="post-content">
+            <a [routerLink]="['/post', post.id]">
+              <div>
+                <span *ngIf="post.content.length > 200"
+                  >{{ post.content | slice : 0 : 200 }}...</span
+                >
+                <span *ngIf="post.content.length <= 200">{{
+                  post.content
+                }}</span>
+              </div>
+            </a>
+          </p>
+          <div class="media">
+            <img
+              *ngIf="post.imageUrl"
+              [src]="post.imageUrl"
+              alt="Post Image"
+              class="post-image"
+            />
+            <video
+              *ngIf="post.videoUrl"
+              [src]="post.videoUrl"
+              controls
+              class="post-video"
+            >
+              {{ "POST.VIDEO_NOT_SUPPORTED" | translate }}
+            </video>
+          </div>
+          <p class="post-date">
+            {{ "POST.CREATED" | translate }}
+            : {{ post.createdDate | date : "medium" }}
+            <br />
+            <span *ngIf="post.modifiedDate">
+              | {{ "POST.MODIFIED" | translate }}:
+              {{ post.modifiedDate | date : "medium" }}
+            </span>
+          </p>
+          <div class="reactions">
+            <div class="like-section">
+              <button class="like-btn" (click)="toggleLike(post.id)">
+                <i
+                  class="fa-heart"
+                  [ngClass]="
+                    isLikedByCurrentUser(post.id) ? 'fa-solid' : 'fa-regular'
+                  "
+                ></i>
+              </button>
+              <span>
+                {{ (postLikesMap[post.id] || []).length }}
+                {{ "POST.LIKES" | translate }}
+              </span>
+            </div>
+            <small class="comments-count">
+              {{ "POST.COMMENTS" | translate }}: {{ post.comments.length }}
+            </small>
+            <a class="share-btn" (click)="sharePost(post.id)">
+              <i class="fa fa-share"></i>
+              {{ "POST.SHARE" | translate }}
+            </a>
+          </div>
+          <div class="comments-section" *ngIf="post.comments.length > 0">
+            <div
+              *ngFor="let comment of post.comments | slice : 0 : 2"
+              class="comment"
+            >
+              <p class="comment-user">
+                <a [routerLink]="['/user-profile', comment.userName]">
+                  {{ comment.userName }}
+                </a>
+              </p>
+              <p class="comment-content">{{ comment.content }}</p>
+              <p class="comment-date">
+                <span dir="ltr">
+                  {{ comment.createdDate | date : "short" }}
+                </span>
+              </p>
+            </div>
           </div>
         </div>
       </div>
