--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -123,9 +123,9 @@
 
       <ng-template #postDetails>
         <div class="post-author">
-          <a [routerLink]="['/user-profile', post.authorName]">{{
-            post.authorName
-          }}</a>
+          <a [routerLink]="['/user-profile', post.authorName]">
+            {{ post.authorName }}
+          </a>
           <div
             class="post-options"
             *ngIf="
@@ -184,14 +184,23 @@
           </span>
         </p>
 
-        <div class="like-section">
-          <button class="like-btn" (click)="toggleLike()">
-            <i
-              class="fa-heart"
-              [ngClass]="isLikedByCurrentUser ? 'fa-solid' : 'fa-regular'"
-            ></i>
-          </button>
-          <span>{{ likes.length }} {{ "POST.LIKES" | translate }}</span>
+        <div class="reactions">
+          <div class="like-section">
+            <button class="like-btn" (click)="toggleLike()">
+              <i
+                class="fa-heart"
+                [ngClass]="isLikedByCurrentUser ? 'fa-solid' : 'fa-regular'"
+              ></i>
+            </button>
+            <span>{{ likes.length }} {{ "POST.LIKES" | translate }}</span>
+          </div>
+          <small class="comments-count">
+            {{ "POST.COMMENTS" | translate }}: {{ comments.length }}
+          </small>
+          <a class="share-btn" (click)="sharePost(post.id)">
+            <i class="fa fa-share"></i>
+            {{ "POST.SHARE" | translate }}
+          </a>
         </div>
       </ng-template>
       <div class="comments-section">
