--- a/src/app/components/user-profile/user-profile.component.scss
+++ b/src/app/components/user-profile/user-profile.component.scss
@@ -8,15 +8,10 @@ $heading-font: "Roboto", sans-serif;
 $body-font: "Open Sans", sans-serif;
 $border-radius: 10px;
 
-.user-profile {
-  background-color: white;
-  padding: 20px;
-  border-radius: $border-radius;
-  margin: 20px auto;
+.main-container {
   animation: fadeIn 1s ease-in-out;
 
   h2 {
-    font-family: $heading-font;
     font-size: 2rem;
     color: $primary-color;
     margin-bottom: 15px;
@@ -26,6 +21,7 @@ $border-radius: 10px;
     font-size: 1rem;
     color: $dark-gray;
     margin-bottom: 15px;
+    text-align: center;
   }
 
   p {
@@ -34,10 +30,11 @@ $border-radius: 10px;
     margin: 10px 0;
     strong {
       color: #000000;
-      font-weight: bold;
+      font-weight: 600;
     }
   }
 }
+
 .no-profile {
   background-color: white;
   padding: 20px;
@@ -55,6 +52,11 @@ $border-radius: 10px;
   }
 }
 
+.main-container,
+.no-profile {
+  padding: 15px;
+}
+
 @keyframes fadeIn {
   0% {
     opacity: 0;
@@ -65,18 +67,20 @@ $border-radius: 10px;
     transform: translateY(0);
   }
 }
+
 @media screen and (max-width: 768px) {
-  .user-profile,
-  .no-profile {
-    padding: 15px;
-  }
+  .main-container {
+    h2 {
+      font-size: 1.5rem;
+    }
 
-  .user-profile h2 {
-    font-size: 1.8rem;
-  }
+    h6 {
+      font-size: 0.9rem;
+    }
 
-  .user-profile p {
-    font-size: 1rem;
+    p {
+      font-size: 1rem;
+    }
   }
 
   .no-profile p {
