--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,12 +13,23 @@
     </span>
     <ul id="nav-menu" [class.show]="isMenuOpen" #mobileNav>
       <li (click)="isMenuOpen = false">
-        <a routerLink="/">{{ "HOME" | translate }}</a>
+        <a routerLink="/">
+          <i class="fas fa-home"></i> {{ "HEADER.HOME" | translate }}</a
+        >
       </li>
       <li (click)="isMenuOpen = false">
         <a routerLink="/search">
-          <i class="fa fa-search"></i> {{ "SEARCH" | translate }}</a
-        >
+          <i class="fa fa-search"></i> {{ "HEADER.SEARCH" | translate }}
+        </a>
+      </li>
+      <li class="notification-icon" (click)="toggleNotifications()">
+        <div class="notification-wrapper">
+          <i class="fa fa-bell"></i>
+          <span class="notification-count" *ngIf="notifications.length > 0">
+            {{ notifications.length }}
+          </span>
+        </div>
+        {{ "HEADER.NOTIFICATIONS.TITLE" | translate }}
       </li>
       <li class="profile-dropdown" *ngIf="!isMenuOpen">
         <a>
@@ -26,19 +37,20 @@
             <a class="dropbtn" (click)="toggleDropdown()">
               <div class="user-info">
                 <i class="fa fa-user-circle"></i>
-                <span> {{ firstName || ("PROFILE" | translate) }}</span>
+                <span> {{ firstName || ("HEADER.PROFILE" | translate) }}</span>
               </div>
             </a>
             <div class="dropdown-content" [class.show]="isDropdownOpen">
               <a routerLink="/profile" (click)="closeDropdown()">
-                <i class="fa fa-user"></i> {{ "PROFILE" | translate }}
+                <i class="fa fa-user"></i> {{ "HEADER.PROFILE" | translate }}
               </a>
               <a
                 *ngIf="this.isAdmin"
                 routerLink="/dashboard"
                 (click)="closeDropdown()"
               >
-                <i class="fa fa-user-shield"></i> {{ "ADMIN" | translate }}
+                <i class="fa fa-user-shield"></i>
+                {{ "HEADER.ADMIN" | translate }}
               </a>
               <a (click)="profileSettings(); closeDropdown()">
                 <i class="fas fa-cogs"></i>
@@ -49,7 +61,7 @@
                   class="fa fa-sign-out"
                   [class.rotate]="currentLang === 'ar'"
                 ></i>
-                {{ "LOGOUT" | translate }}
+                {{ "HEADER.LOGOUT" | translate }}
               </a>
             </div>
           </div>
@@ -58,12 +70,12 @@
 
       <li *ngIf="isMenuOpen">
         <a routerLink="/profile" (click)="isMenuOpen = false">
-          <i class="fa fa-user"></i> {{ "PROFILE" | translate }}
+          <i class="fa fa-user"></i> {{ "HEADER.PROFILE" | translate }}
         </a>
       </li>
       <li *ngIf="isMenuOpen && isAdmin">
         <a routerLink="/dashboard" (click)="isMenuOpen = false">
-          <i class="fa fa-user-shield"></i> {{ "ADMIN" | translate }}
+          <i class="fa fa-user-shield"></i> {{ "HEADER.ADMIN" | translate }}
         </a>
       </li>
       <li *ngIf="isMenuOpen">
@@ -74,9 +86,25 @@
       <li *ngIf="isMenuOpen">
         <a (click)="logout(); isMenuOpen = false">
           <i class="fa fa-sign-out" [class.rotate]="currentLang === 'ar'"></i>
-          {{ "LOGOUT" | translate }}
+          {{ "HEADER.LOGOUT" | translate }}
         </a>
       </li>
     </ul>
+    <div
+      class="notification-list"
+      *ngIf="isNotificationsOpen"
+      #notificationList
+    >
+      <div
+        *ngFor="let notification of notifications"
+        (click)="navigateToPost(notification.relatedPostId, notification.id)"
+        class="notification-item"
+      >
+        {{ notification.message }}
+      </div>
+      <div *ngIf="notifications.length === 0" class="notification-item">
+        {{ "HEADER.NOTIFICATIONS.NO_CONTENT" | translate }}
+      </div>
+    </div>
   </nav>
 </header>
