--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -86,7 +86,59 @@ header {
     display: flex;
   }
 }
-@media (max-width: 792px) {
+.notification-list {
+  position: absolute;
+  top: 5vh;
+  inset-inline-end: 10px;
+  width: 300px;
+  max-height: 400px;
+  overflow-y: auto;
+  background: #fff;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+}
+
+.notification-item {
+  padding: 10px;
+  border-bottom: 1px solid #eee;
+  cursor: pointer;
+}
+
+.notification-item:hover {
+  background-color: #f5f5f5;
+}
+
+.notification-icon {
+  cursor: pointer;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.notification-icon:hover {
+  color: #007bff;
+}
+
+.notification-wrapper {
+  position: relative;
+  display: inline-block;
+}
+
+.notification-count {
+  position: absolute;
+  top: -10px;
+  inset-inline-start: -12px;
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  padding: 2px 6px;
+  font-size: 12px;
+  font-weight: bold;
+}
+
+@media (max-width: 560px) {
   header {
     height: 5vh;
     nav {
