--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,5 +1,5 @@
 header {
-  background-color: #f8f9fa;
+  background-color: #fff;
   padding: 10px 20px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   height: 5vh;
@@ -15,13 +15,17 @@ header {
   nav {
     display: flex;
     justify-content: space-between;
+    max-width: 50%;
+    flex-grow: 1;
     ul {
       list-style: none;
       display: flex;
+      width: 100%;
       gap: 15px;
       margin: 0;
       padding: 0;
       align-items: center;
+      justify-content: space-around;
       li {
         display: inline;
         a {
@@ -30,9 +34,28 @@ header {
           font-weight: bold;
           cursor: pointer;
           transition: color 0.3s;
-          &:hover {
+          &:hover,
+          &.active {
             color: #007bff;
           }
+        }
+      }
+      i {
+        font-size: 1.5rem;
+      }
+      .user-info {
+        color: #eee;
+        background-color: #333;
+        border-radius: 50%;
+        height: 2rem;
+        width: 2rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: 0.3s;
+        text-transform: uppercase;
+        &:hover {
+          background-color: #007bff;
         }
       }
     }
@@ -50,19 +73,15 @@ header {
 }
 
 .dropbtn {
-  background-color: transparent;
-  border: none;
   cursor: pointer;
   font-size: 16px;
-  display: flex;
-  align-items: center;
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 160px;
+  min-width: 170px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   z-index: 1;
   flex-direction: column;
@@ -136,74 +155,4 @@ header {
   padding: 2px 6px;
   font-size: 12px;
   font-weight: bold;
-}
-
-@media (max-width: 560px) {
-  header {
-    height: 5vh;
-    nav {
-      .icon {
-        display: flex;
-        flex-wrap: wrap;
-        width: 40px;
-        justify-content: flex-end;
-        cursor: pointer;
-        align-content: center;
-        padding: 5px;
-        border: 1px solid #000;
-        border-radius: 5px;
-        transition: 0.3s;
-        span {
-          background-color: #000000;
-          height: 2px;
-          &:not(:last-child) {
-            margin-bottom: 5px;
-          }
-          &:first-child,
-          &:last-child {
-            width: 100%;
-          }
-          &:nth-child(2) {
-            width: 60%;
-            transition: 0.3s;
-          }
-        }
-        &:hover span:nth-child(2) {
-          width: 100%;
-        }
-      }
-      #nav-menu {
-        display: none;
-        flex-direction: column;
-        position: absolute;
-        top: 5vh;
-        right: 0;
-        width: 100%;
-        gap: 5px;
-        background-color: #fff;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        z-index: 1000;
-        &.show {
-          display: flex;
-        }
-        li {
-          width: 100%;
-          text-align: center;
-          transition: 0.3s;
-          :hover {
-            background-color: rgb(181, 181, 183);
-          }
-          a {
-            color: #333;
-            font-size: 18px;
-            display: block;
-            padding: 5px 10px;
-            &:hover {
-              color: #000;
-            }
-          }
-        }
-      }
-    }
-  }
 }
