feat: enhance language support and UI elements, update share button rotation, and refine styling for posts and header feat: enhance post styling, update like button, and improve token refresh logic in interceptor

--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -198,7 +198,7 @@
             <i class="far fa-comment"></i> {{ comments.length }}
           </small>
           <a class="share-btn" (click)="sharePost(post.id)">
-            <i class="fa fa-share"></i>
+            <i class="fa fa-share" [class.rotate]="currentLang === 'ar'"></i>
           </a>
         </div>
       </ng-template>
