--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -175,7 +175,7 @@
             {{ post.createdDate | date : "medium" }}
           </p>
           <a class="share-btn" (click)="sharePost(post.originalPost!.id)">
-            <i class="fa fa-share"></i>
+            <i class="fa fa-share" [class.rotate]="currentLang === 'ar'"></i>
           </a>
         </div>
       </div>
@@ -238,7 +238,7 @@
             <i class="far fa-comment"></i> {{ post.comments.length }}
           </small>
           <a class="share-btn" (click)="sharePost(post.id)">
-            <i class="fa fa-share"></i>
+            <i class="fa fa-share" [class.rotate]="currentLang === 'ar'"></i>
           </a>
         </div>
         <div class="comments-section">
