--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -95,7 +95,7 @@
             {{ post.createdDate | date : "medium" }}
           </p>
           <a class="share-btn" (click)="sharePost(post.originalPost!.id)">
-            <i class="fa fa-share"></i>
+            <i class="fa fa-share" [class.rotate]="currentLang === 'ar'"></i>
           </a>
         </div>
       </div>
@@ -153,7 +153,7 @@
             <i class="far fa-comment"></i> {{ post.comments.length }}
           </small>
           <a class="share-btn" (click)="sharePost(post.id)">
-            <i class="fa fa-share"></i>
+            <i class="fa fa-share" [class.rotate]="currentLang === 'ar'"></i>
           </a>
         </div>
         <div class="comments-section" *ngIf="post.comments.length > 0">
